--- a/style.css
+++ b/style.css
@@ -13,3 +13,47 @@
     text-decoration: none;
     color: black;
 }
+
+
+.main{
+   
+    display: flex;
+    border: 2px solid black;
+    width: 300px;
+    height: 200px;
+    align-items: center ;
+    margin: auto;
+    background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTZEwuMihBs6QEwQ9bJS4Lp9GRHd_wfZ2eZ8Q&s");
+}
+.first{
+    
+    
+    
+    width: 100px;
+    height: 80px;
+    background-color: blanchedalmond;
+    align-items: center;
+    margin: auto;
+    
+}
+.second{
+    width: 100px;
+    height: 80px;
+    background-color: blanchedalmond;
+    align-items: center;
+    margin: auto;
+    
+}
+.zero{
+    width: 50px;
+    height: 50px;
+    background-color: bisque;
+    text-align: center;
+    padding-top: 20px;
+    
+    
+    border-radius: 25px;
+    font-weight: bolder;
+    font-size: 30px;
+}
+
